# cuda_float_compress

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.in  README.md  cuda_float_compress.cpp  install.sh  pyproject.toml  setup.cfg  setup.py
cpu_compress_test/: CMakeLists.txt  cpu_compress_test.cpp
examples/: basic_example.py  minimal_example.py  model_compress_example.py
interleave_test/: CMakeLists.txt  interleave_test.cu  test_offset.cpp
prefix_sum_test/: CMakeLists.txt  test.cu
src/: cuda_float_compress.cpp  cuszplus_f32.cu  cuszplus_f32.h
src/cuda_float_compress/: cuszplus_f32.cu
