[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
    "torch",
]
build-backend = "scikit_build_core.build"

[project]
name = "cuda_float_compress"
version = "0.1.0"
description = "A PyTorch CUDA extension for cuSZp compression"
requires-python = ">=3.7"
dependencies = [
    "torch",
]
