[metadata]
name = cuda_float_compress
version = 0.2.3
author = Chris Taylor
author_email = mrcatid@gmail.com
description = Python package for compressing floating-point PyTorch tensors
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/catid/cuda_float_compress
project_urls =
    Bug Tracker = https://github.com/catid/cuda_float_compress/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
